<resources>
    <string name="app_name">BottleMessage</string>
    <string name="time_screen">time-screen</string>
    <string name="_12_00">12:00</string>
    <string name="april_10_2020">April 10, 2020</string>
    <string name="locksymbol">TODO</string>
    <string name="background">background</string>
    <string name="anim_try">anim_try</string>
    <string name="stillbottle">TODO</string>
    <string name="redobutton">redobutton</string>
    <string name="firstsymbol">firstsymbol</string>
    <string name="undobutton">undobutton</string>
    <string name="nextbutton">nextbutton</string>
    <string name="anim_two">anim_two</string>
    <string name="anim_three">anim_three</string>
    <string name="bottle_png">bottle_png</string>
    <string name="sender">sender</string>
    <string name="from_diane">From Diane</string>
</resources>
