<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/redo"
            android:layout_width="31dp"
            android:layout_height="30dp"
            android:layout_marginStart="300dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="690dp"
            android:contentDescription="@string/redobutton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_revert" />

        <ImageView
            android:id="@+id/first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="401dp"
            android:contentDescription="@string/firstsymbol"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/firsttools" />

        <ImageView
            android:id="@+id/next"
            android:layout_width="73dp"
            android:layout_height="66dp"
            android:layout_marginStart="331dp"
            android:layout_marginLeft="331dp"
            android:layout_marginTop="401dp"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="264dp"
            android:contentDescription="@string/nextbutton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/next" />

        <ImageView
            android:id="@+id/undo"
            android:layout_width="24dp"
            android:layout_height="26dp"
            android:layout_marginStart="356dp"
            android:layout_marginLeft="356dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="31dp"
            android:layout_marginRight="31dp"
            android:layout_marginBottom="691dp"
            android:contentDescription="@string/undobutton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/copy" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
